[package]
name = "submarine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display"] }
hex = "0.4.3"
jsonrpsee = { version = "0.26.0", features = ["async-client", "ws-client"] }
parity-scale-codec = "3.7.5"
serde = { version = "1.0.226", features = ["derive"] }
subxt = "0.44.0"
subxt-signer = "0.44.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
